--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -1,6 +1,6 @@
 <h1 class="page-header" ng-if="!is_create_view">Edit Slave '{{slave.hostname}}'
     <small><a href="/#/riskgroups"><span class="label label-primary"
-                 ng-if="slave.risk_group_id != null">{{slave.riskgroup.name}}</span></a></small>
+                                         ng-if="slave.risk_group_id != null">{{slave.riskgroup.name}}</span></a></small>
 </h1>
 <h1 class="page-header" ng-if="is_create_view">New Slave</h1>
 
@@ -12,7 +12,8 @@
 </div>
 
 <div class="bs-callout bs-callout-{{ slave.configured_state }}" ng-if="!is_create_view && problems.length == 0">
-    <h4>{{ slave.hostname }} is in
+    <h4><span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
+        {{ slave.hostname }} is in
         <b>{{ slave.configured_state }}</b>
         state.</h4>
 </div>
