ADD: create buttons on replica set and slave overview

--- a/gui/pages/replicasets.html
+++ b/gui/pages/replicasets.html
@@ -1,4 +1,5 @@
-<h1 class="page-header">Replica Sets</h1>
+<h1 class="page-header">Replica Sets<span class="pull-right"><a href="/#/replicasets/new" class="btn btn-success">Create new Replica Set</a></span>
+</h1>
 <h2 class="sub-header">Replica Sets with problems</h2>
 <div class="bs-callout bs-callout-unknown" ng-repeat="replicaset in replicasets" ng-if="replicaset.problems.length > 0">
     <h4>
