--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -1,4 +1,5 @@
-<h1 class="page-header">Slaves</h1>
+<h1 class="page-header">Slaves<span class="pull-right"><a href="/#/slaves/new"
+                                                          class="btn btn-success">Create new Slave</a></span></h1>
 
 <h2 class="sub-header">Slaves with Problems</h2>
 <div class="bs-callout bs-callout-unknown" ng-repeat="slave in slaves" ng-if="slave.problems.length > 0">
