--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -12,5 +12,8 @@
             Replica Set</a></li>
     </ul>
 </div>
+<a href="/#/problems" class="btn btn-default pull-right" ng-if="problems.length > 3">{{ problems.length - 3 }} more
+    Problems <span aria-hidden="true">&rarr;</span></a>
+<br/>
 <h2 class="sub-header">Slave States</h2>
 <div id="slaves"></div>
