UPD: 'recent' instead of 'latest'

--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -1,5 +1,5 @@
 <h1 class="page-header">Your MongoDB Cluster</h1>
-<h2 class="sub-header">Latest problems</h2>
+<h2 class="sub-header">Recent problems</h2>
 <div class="bs-callout bs-callout-unknown"
      ng-repeat="problem in problems | orderBy:problem.first_occurred:true | limitTo:3">
     <h4>{{problem.description}}
