--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -15,21 +15,17 @@
     <div class="panel-heading">
         <h3 class="panel-title">Replica Set Overview</h3>
     </div>
-    <div class="panel-body">
-        <h4>Slaves</h4>
-        <table class="table" width="100%">
-            <tr ng-repeat="slave in replicaset_slaves">
-                <td>
-                    <div class="bs-callout bs-callout-{{ slave.configured_state }}">
-                        <h4><span class="glyphicon glyphicon-hdd" aria-hidden="true"
-                                  ng-if="slave.persistent_storage"></span> <a href="/#/slaves/{{slave.id}}">{{ slave.hostname }}</a> - <b>
-                            {{ slave.configured_state }}</b>
-                        </h4>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </div>
+    <table class="table" width="100%">
+        <tr ng-repeat="mongo in replicaset.mongods">
+            <td>
+                <a href="/#/slaves/{{mongo.slave.id}}">Mongod on <code>{{ mongo.slave.hostname }}:{{mongo.slave_port}}</code></a> -
+                <b> Slave is in
+                    {{ mongo.slave.configured_state }} mode.</b>
+
+            </td>
+        </tr>
+    </table>
+</div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading">
