ADD: transitioning message on slaves

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -3,7 +3,6 @@
                                          ng-if="slave.risk_group_id != null">{{slave.riskgroup.name}}</span></a></small>
 </h1>
 <h1 class="page-header" ng-if="is_create_view">New Slave</h1>
-
 <div class="bs-callout bs-callout-unknown" ng-repeat="problem in problems" ng-if="!is_create_view">
     <h4>{{problem.description}}
         <small>Known since {{formatDate(problem.first_occurred)}}</small>
@@ -79,7 +78,7 @@
         <h3 class="panel-title">Slave Control</h3>
     </div>
     <div class="panel-body">
-        <div class="btn-group btn-group-justified" role="group">
+        <div class="btn-group btn-group-justified pull-right" role="group">
             <div class="btn-group" role="group">
                 <button ng-disabled="slave.configured_state == 'unknown'"
                         ng-class="{active: slave.configured_state == 'active'}"
@@ -98,6 +97,16 @@
                     Disabled
                 </button>
             </div>
+        </div>
+        <br/>
+        <div class="bs-callout bs-callout-maintenance clearfix" ng-if="edit_slave.configured_state_transitioning">
+            <img class="pull-left" width="50px" src="/static/img/gears.svg"/>
+            <h4 style="padding-top: 15px; margin-left: 65px;">Slave is changing state.
+                <small ng-if="edit_slave.configured_state == 'disabled'"><br/>Migrating Mongods to other machines to honor
+                    replica set member counts. Only after the replacement instances are in sync with the remaining
+                    members of the Replica Set, members on this slave will be removed.
+                </small>
+            </h4>
         </div>
     </div>
 </div>
