--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -108,7 +108,7 @@
             <img class="pull-left" width="50px" src="/static/img/gears.svg"/>
             <h4 style="padding-top: 15px; margin-left: 65px;">Slave is changing state.
                 <small ng-if="edit_slave.configured_state == 'disabled'"><br/>Migrating Mongods to other machines to honor
-                    replica set member counts. Only after the replacement instances are in sync with the remaining
+                    Replica Set member counts. Only after the replacement instances are in sync with the remaining
                     members of the Replica Set, members on this slave will be removed.
                 </small>
             </h4>
