--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -35,16 +35,18 @@
                     <tr>
                         <th>Slave port</th>
                         <td colspan="2">
-                            <input type="number" class="form-control" ng-model="edit_slave.slave_port"/>
+                            <input type="number" class="form-control" placeholder="8081" ng-model="edit_slave.slave_port"/>
                         </td>
                     </tr>
                     <tr>
-                        <th>Mongod port range</th>
+                        <th>Mongod port range <span data-toggle="tooltip" data-placement="right"
+                                                    title="Start is inclusive, stop is exclusive."><span
+                                class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></span></th>
                         <td>
-                            <input type="number" class="form-control" ng-model="edit_slave.mongod_port_range_begin"/>
+                            <input type="number" class="form-control" placeholder="18080" ng-model="edit_slave.mongod_port_range_begin"/>
                         </td>
                         <td>
-                            <input type="number" class="form-control" ng-model="edit_slave.mongod_port_range_end"/>
+                            <input type="number" class="form-control" placeholder="18081" ng-model="edit_slave.mongod_port_range_end"/>
                         </td>
                     </tr>
                     <tr>
