UPD: GUI: don't display names in button in modals

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -98,8 +98,7 @@
                 replica set will be unrecoverably removed.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" ng-click="deleteReplicaSet()">Remove Replica Set '{{
-                    replicaset.name }}'
+                <button type="button" class="btn btn-danger" ng-click="deleteReplicaSet()">Remove Replica Set
                 </button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
