--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -141,8 +141,7 @@
                 You are about to remove the slave '{{ slave.hostname }}'.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" ng-click="deleteSlave()">Remove slave '{{ slave.hostname
-                    }}'
+                <button type="button" class="btn btn-danger" ng-click="deleteSlave()">Remove slave
                 </button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
