UPD: gui: monospaced slave/riskgroup/replica set names in modals

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -94,7 +94,7 @@
                 <h4 class="modal-title" id="myModalLabel">Confirm Replica Set Removal</h4>
             </div>
             <div class="modal-body">
-                You are about to remove the replica set {{ replicaset.name }}. By doing so, all the data of this
+                You are about to remove the replica set <code>{{ replicaset.name }}</code>. By doing so, all the data of this
                 replica set will be unrecoverably removed.
             </div>
             <div class="modal-footer">
