--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -138,7 +138,7 @@
                 <h4 class="modal-title" id="myModalLabel">Confirm Slave Removal</h4>
             </div>
             <div class="modal-body">
-                You are about to remove the slave '{{ slave.hostname }}'.
+                You are about to remove the slave <code>{{ slave.hostname }}</code>.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" ng-click="deleteSlave()">Remove slave
@@ -158,7 +158,7 @@
                 <h4 class="modal-title" id="confirmDisableLabel">Confirm Slave state change</h4>
             </div>
             <div class="modal-body">
-                You are about to disable the slave '{{ slave.hostname }}'.
+                You are about to disable the slave <code>{{ slave.hostname }}</code>.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" ng-click="setSlaveState('disabled')">Disable slave</button>
