UPD: gui: removed entity name from remove buttons

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -80,7 +80,7 @@
     </div>
     <div class="panel-body">
         <button type="button" role="button" class="btn btn-danger"
-                data-toggle="modal" data-target="#confirm_remove">Remove Replica Set '{{ replicaset.name }}' from system
+                data-toggle="modal" data-target="#confirm_remove">Remove Replica Set from system
         </button>
     </div>
 </div>
