--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -124,7 +124,7 @@
     <div class="panel-body">
         <p>Removal is only possible with the slave in disabled mode.</p>
         <button ng-disabled="slave.configured_state != 'disabled'" type="button" role="button" class="btn btn-danger"
-                data-toggle="modal" data-target="#confirm_remove">Remove slave '{{ slave.hostname }}' from system
+                data-toggle="modal" data-target="#confirm_remove">Remove slave from system
         </button>
     </div>
 </div>
