--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -17,6 +17,17 @@
         state.</h4>
 </div>
 
+<div class="panel panel-default" ng-if="!is_create_view">
+    <div class="panel-heading">
+        <h3 class="panel-title">Running mongods on Slave</h3>
+    </div>
+    <table class="table">
+        <tr ng-repeat="mongod in mongods">
+            <td>Mongod at <code>{{slave.hostname}}:{{mongod.slave_port}}</code></td>
+        </tr>
+    </table>
+</div>
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title" ng-if="!is_create_view">Slave Settings</h3>
@@ -35,7 +46,8 @@
                     <tr>
                         <th>Slave port</th>
                         <td colspan="2">
-                            <input type="number" class="form-control" placeholder="8081" ng-model="edit_slave.slave_port"/>
+                            <input type="number" class="form-control" placeholder="8081"
+                                   ng-model="edit_slave.slave_port"/>
                         </td>
                     </tr>
                     <tr>
@@ -43,10 +55,12 @@
                                                     title="Start is inclusive, stop is exclusive."><span
                                 class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></span></th>
                         <td>
-                            <input type="number" class="form-control" placeholder="18080" ng-model="edit_slave.mongod_port_range_begin"/>
+                            <input type="number" class="form-control" placeholder="18080"
+                                   ng-model="edit_slave.mongod_port_range_begin"/>
                         </td>
                         <td>
-                            <input type="number" class="form-control" placeholder="18081" ng-model="edit_slave.mongod_port_range_end"/>
+                            <input type="number" class="form-control" placeholder="18081"
+                                   ng-model="edit_slave.mongod_port_range_end"/>
                         </td>
                     </tr>
                     <tr>
@@ -82,8 +96,12 @@
     <div class="panel-body">
         <ul>
             <li><b>Active</b> This Slave eligible to host Mongods.</li>
-            <li><b>Maintenance mode</b> No new Mongods will be spawned on this Slave. Existing Mongods will be left untouched. Monitoring is disabled.</li>
-            <li><b>Disabled</b> This Slave should not host Mongods. Existing Mongods are attempted to be migrated to eligible Slaves.</li>
+            <li><b>Maintenance mode</b> No new Mongods will be spawned on this Slave. Existing Mongods will be left
+                untouched. Monitoring is disabled.
+            </li>
+            <li><b>Disabled</b> This Slave should not host Mongods. Existing Mongods are attempted to be migrated to
+                eligible Slaves.
+            </li>
         </ul>
         <div class="btn-group btn-group-justified pull-right" role="group">
             <div class="btn-group" role="group">
@@ -100,7 +118,8 @@
             </div>
             <div class="btn-group" role="group">
                 <button ng-disabled="slave.configured_state == 'unknown'" class="btn btn-default"
-                        ng-class="{active: slave.configured_state == 'disabled'}" data-toggle="modal" data-target="#confirm_disable">
+                        ng-class="{active: slave.configured_state == 'disabled'}" data-toggle="modal"
+                        data-target="#confirm_disable">
                     Disabled
                 </button>
             </div>
@@ -109,7 +128,8 @@
         <div class="bs-callout bs-callout-maintenance clearfix" ng-if="edit_slave.configured_state_transitioning">
             <img class="pull-left" width="50px" src="/static/img/gears.svg"/>
             <h4 style="padding-top: 15px; margin-left: 65px;">Slave is changing state.
-                <small ng-if="edit_slave.configured_state == 'disabled'"><br/>Migrating Mongods to other machines to honor
+                <small ng-if="edit_slave.configured_state == 'disabled'"><br/>Migrating Mongods to other machines to
+                    honor
                     Replica Set member counts. Only after the replacement instances are in sync with the remaining
                     members of the Replica Set, members on this slave will be removed.
                 </small>
