FIX: GUI: 'deployed' intead of 'running' mongods

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -19,7 +19,7 @@
 
 <div class="panel panel-default" ng-if="!is_create_view">
     <div class="panel-heading">
-        <h3 class="panel-title">Running Mongods on Slave</h3>
+        <h3 class="panel-title">Deployed Mongods on Slave</h3>
     </div>
     <table class="table">
         <tr ng-repeat="mongod in mongods">
