--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -1,4 +1,4 @@
-<h1 class="page-header" ng-if="!is_create_view">Edit Slave '{{slave.hostname}}'
+<h1 class="page-header" ng-if="!is_create_view">Edit Slave <code>{{slave.hostname}}</code>
     <small><a href="/#/riskgroups"><span class="label label-primary"
                                          ng-if="slave.risk_group_id != null">{{slave.riskgroup.name}}</span></a></small>
 </h1>
