FIX: GUI: monospace slave names in replica set view

--- a/gui/pages/riskgroups.html
+++ b/gui/pages/riskgroups.html
@@ -32,7 +32,7 @@
             <ul class="list-group">
                 <li ng-repeat="slave in unassigned_slaves" class="list-group-item"><a href="#/slaves/{{slave.id}}"><span
                         class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                    {{slave.hostname}}</a>
+                    <code>{{slave.hostname}}</code></a>
                     <span class="pull-right">Assign to
                             <select ng-model="slave.riskgroup" ng-change="assignToRiskGroup(slave)">
                                 <option value="" selected>Select group..</option>
@@ -62,7 +62,7 @@
             <ul class="list-group">
                 <li ng-repeat="slave in riskgroup.slaves" class="list-group-item"><a href="#/slaves/{{slave.id}}"><span
                         class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                    {{slave.hostname}}</a>
+                    <code>{{slave.hostname}}</code></a>
                     <span class="pull-right">Assign to
                         <select ng-model="slave.riskgroup" ng-change="assignToRiskGroup(slave, riskgroup)">
                             <option value="" selected>Select group..</option>
