FIX: GUI: display toltip in slave view

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -53,7 +53,7 @@
                     </tr>
                     <tr>
                         <th>Mongod port range <span data-toggle="tooltip" data-placement="right"
-                                                    title="Start is inclusive, stop is exclusive."><span
+                                                    title="Begin is inclusive, end is exclusive."><span
                                 class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></span></th>
                         <td>
                             <input type="number" class="form-control" placeholder="18080"
