ADD: system page

--- a/gui/index.html
+++ b/gui/index.html
@@ -83,6 +83,10 @@
                         class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
                     New Replica Set</a></li>
             </ul>
+            <ul class="nav nav-sidebar">
+                <li ng-class="{'active': $location.path()=='/system'}"><a href="/#system"><span
+                        class="glyphicon glyphicon-cog" aria-hidden="true"></span> System</a></li>
+            </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <div id="content">
